test: incluir testes de integração e unitários para busca de autores geral e por nome